nav.css
@import url("https://fonts.googleapis.com/css2?family=Cinzel&family=Inter&family=Open+Sans&swap=display");

a
{
    text-decoration: none;
}
a:visited,
a:active,	
a:link,	
a:visited
{
    color: inherit;
}
#nav-background
{
    z-index: 2;
    background-color: maroon;
    position: fixed;
    left: 50%;
    transform: translate(-50%, 0);
    top: 0; 
    width: 100%;
    height: 100px;
}
#navigation
{
    position: relative;
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 20px;
    margin-left: auto;
    margin-right: auto;
    top: 0; /* Position the navbar at the top of the page */
    height: 100px;
    width: 1100px;
    max-width: 95%;
}

.nav-button
{
    margin-left: auto;
    margin-right: auto;
    background-color: inherit;
    border: none;
    outline: none;
    font-family: "Inter";
    font-size: 19px;
    color: rgb(255, 255, 255);
    position: relative;
}

.nav-button:hover .dropdown-content
{
    position: absolute;
    display: flex;
    flex-direction: column;
    background-color: #2A2A2A;
    width: 160px;
    left: 50%;
    transform: translateX(-50%);
    top: 100%;

}

.dropdown-content /* So activates when mouse hovers */
{
    display: none;
}

.dropdown-content a /* Styling for the links in dropdown menu */
{
    color: white;
    padding: 12px 18px;
    text-align: center;
}

.dropdown-content a:hover /* Color when hover over dropdown menu links*/
{
    background-color: rgba(80, 80, 80, 60%);
}
#crest-img
{
    align-self: center;
    padding: 0px;
    height: 75px;
    width: 75px;
    border: 1px solid rgba(255, 255, 255, 0.75);
    
}
#instagram-img, #hamburger
{
    margin-left: auto;
    align-self: center;
    height: 40px;
    width: 40px;
}
#ltd-text
{
    border: none;
    cursor: pointer;
    outline: none;
    text-align: center;
}
#top-text
{
    font-size: 1.5em;
    color: rgb(255, 255, 255);
    font-weight: bold;
    font-family: "Georgia";
    letter-spacing: 1.4px;
    white-space: nowrap;
}
#bottom-text
{
    border-top: 1px solid rgb(255, 255, 255);
    color: rgb(255, 255, 255);
    font-family: "Cinzel";
    font-size: 15px;
    font-style: italic;
    white-space: nowrap;   
}

#hamburger, 
#hamburger::before,
#hamburger::after,
#hamburger input,
#mobile-navigation
{
    display: none;
}
@media screen and (max-width: 420px)
{
    #crest-img
    { 
        display: none;
    }
}
@media screen and (max-width: 712px) /* Switch to mobile style nav bar */
{
    #hamburger, 
    #hamburger::before,
    #hamburger::after,
    #hamburger input
    {
        display: flex;
    }
    #instagram-img, .nav-button
    {
       display: none;
    }
        #top-text
    {
        font-size: 1.3em;
    }
    #bottom-text
    {
        font-size: 14px;
    }

    :root
    {
        --bar-width: 40px;
        --bar-height: 4px;
        --bar-gap: 10px;
        --animation-delay: 200ms ease-in-out;
        --hamburger-height: calc(
            (2*var(--bar-gap)) + (3 * var(--bar-height))
        );
    }
    #hamburger {
        --x-width: calc(var(--hamburger-height) * 1.41421356237);
        display: flex;
        flex-direction: column;
        gap: var(--bar-gap);
        width: max-content;
        cursor: pointer;
        z-index: 2;
    }
    #hamburger::before,
    #hamburger::after,
    #hamburger input
    {
        content: "";
        width: var(--bar-width);
        height: var(--bar-height);
        background-color: white;
        border-radius: 99999px;
        transform-origin: right center;
        transition: opacity var(--animation-delay), 
        width var(--animation-delay), 
        rotate var(--animation-delay), 
        translate var(--animation-delay);
    }
    input
    {
        appearance: none;
        padding: 0;
        margin: 0;
        outline: none;
        pointer-events: none;
    }
    #hamburger:has(input:checked)::before
    {
        width: var(--x-width);
        rotate: -45deg;
        translate: 0 calc(var(--bar-height) / -2);
    }
    #hamburger:has(input:checked)::after
    {
        width: var(--x-width);
        rotate: 45deg;
        translate: 0 calc(var(--bar-height) / 2);
    }
    #hamburger input:checked
    {
        opacity: 0;
        width: 0;
    }
    #navigation:has( input:checked) + #mobile-navigation
    {
        visibility: visible;
        opacity: 1;
    }
    #mobile-navigation
    {
        padding-top: 3vh;
        visibility: hidden;
        opacity: 0;
        background-color: grey;
        min-height: 100vh;
        width: 100%;
        background-size: cover;
        background-image: url("imgs/mobile-background.jpg");
        background-repeat: no-repeat;
        background-position: center;
        display: flex;
        flex-direction: column;
        transition: visibility 1s, opacity var(--animation-delay);
    }
    #mobile-navigation > div
    {
        background-color: rgba(200, 200, 200, 0.7);
    }
    #mobile-navigation > div
    {
        width: 300px;
        max-width: 80%;
        height: max-content;
        margin-left: auto;
        margin-right: auto;
    }
    .mobile-main-buttons
    {
        display: inline-block;
        border: none;
        background: none;
        outline: none;
        font-family: "Inter";
        font-size: 19px;
        color: black;
        position: relative;
        left: 50%; 
        transform: translateX(-50%);
        height: 10vh;
        line-height: 10vh;
    }
    .mobile-sub-button-container
    {
        display: none;
    }
    .mobile-sub-buttons
    {
        display: inherit;
        border: none;
        background: none;
        outline: none;
        text-align: center;
        margin-left: auto;
        margin-right: auto;
        font-family: "Open Sans";
        font-family: 17px;
        height: 10vh;
        line-height: 10vh; /* So vertically align text*/
        width: inherit;
        background-color: rgba(256, 256, 256, 0.9);
    }
    .mobile-exp {
        display: inline-flex;
        flex-direction: column;
        gap: 0;
        margin: 0;
        width: max-content;
        cursor: pointer;
        translate: 0 -5px;
        position: relative;
        left: 50%; 
        transform: translateX(-120%);
    }
    .mobile-exp::before,
    .mobile-exp input
    {
        content: "";
        width: 20px;
        height: 3px;
        background-color: rgba(0, 0, 0, 0.8);
        border-radius: 99999px;
        transition: opacity var(--animation-delay), 
        width var(--animation-delay), 
        rotate var(--animation-delay), 
        translate var(--animation-delay);
    }
    .mobile-exp input {
        translate: 0 -3px;
        transform-origin: center;
        rotate: 90deg;
    }
    .mobile-exp input:checked
    {
        opacity: 0;
        rotate: -90deg;
    }
    .mobile-exp:has( input:checked) + div
    {
        display: block;
    }
}

